<!-- res/layout/activity_main.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F8E9"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="155dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/urfruits"
        android:textColor="@color/urfruits_color"
        android:textSize="51sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/welcomeContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_welcome"
        android:orientation="vertical"
        android:layout_marginTop="98dp"
        android:paddingVertical="50dp"
        android:paddingHorizontal="40dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoText"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="50dp"/>

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/lorem"
            android:textColor="#757575"
            android:textSize="14sp"
            android:layout_marginHorizontal="25dp"/>

        <Button
            android:id="@+id/signinButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/signin_color"
            android:text="@string/signin"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:fontFamily="@font/inter_medium"
            app:cornerRadius="12dp"/>

        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/signup_color"
            android:text="@string/signup"
            android:textColor="@color/signup_text_color"
            android:textSize="16sp"
            android:fontFamily="@font/inter_medium"
            app:cornerRadius="12dp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
