<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F8E9"
    tools:context=".signin.SigninActivity">

    <TextView
        android:id="@+id/logoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="70dp"
        android:fontFamily="@font/pacifico"
        android:gravity="center"
        android:text="@string/urfruits"
        android:textColor="@color/urfruits_color"
        android:textSize="51sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="25dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="70dp"
        android:fontFamily="@font/inter_medium"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoText" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:lines="1"
        android:inputType="textEmailAddress"
        android:textSize="15sp"
        android:background="@drawable/round_edit_text"
        android:drawableStart="@drawable/person_icon"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText"
        android:hint="@string/hint_email"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        android:background="@drawable/round_edit_text"
        android:drawableStart="@drawable/lock_icon"
        android:drawablePadding="10dp"
        android:lines="1"
        android:textSize="15sp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email"
        tools:ignore="LabelFor"
        android:hint="@string/hint_password" />

    <Button
        android:id="@+id/signinButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/signin_color"
        android:fontFamily="@font/inter_medium"
        android:text="@string/signin"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@+id/input_password"
        app:layout_constraintStart_toStartOf="@+id/input_password"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/signinButton">

        <TextView
            android:id="@+id/dont_have"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/dont_have"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans_semibold"
            app:layout_constraintEnd_toEndOf="@+id/input_password"
            app:layout_constraintStart_toStartOf="@+id/input_password"
            app:layout_constraintTop_toBottomOf="@+id/input_password" />

        <TextView
            android:id="@+id/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/green_tulen"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans_semibold"
            app:layout_constraintEnd_toEndOf="@+id/input_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/dont_have"
            app:layout_constraintTop_toBottomOf="@+id/input_password" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>