<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <View
        android:id="@+id/viewBackground"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/ijo"
        android:backgroundTint="@color/ijo" />

    <ImageView
        android:id="@+id/roundedSquareBlue"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:src="@drawable/rounded_square"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/ijomuntahkucing"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@+id/viewBackground" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:src="@drawable/texture_home"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/mainProfile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/user_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/mainProfile"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/greetingProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greeting"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/nameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/user_name_placeholder"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tittleArticleSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_name"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundedSquareBlue" />

    <Button
        android:id="@+id/textButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:text="Lihat Semua"
        android:textColor="@color/ijo"
        android:textSize="14sp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundedSquareBlue" />

    <Button
        android:id="@+id/filterArticle"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:text="@string/filter"
        app:cornerRadius="8dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tittleArticleSection"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/filterArticle2"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:text="@string/filter"
        android:textColor="@color/gray"
        android:backgroundTint="@color/lightgray"
        android:textSize="14sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/filterArticle"
        app:layout_constraintStart_toEndOf="@id/filterArticle"
        app:layout_constraintTop_toTopOf="@+id/filterArticle" />
    <Button
        android:id="@+id/filterArticle3"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:text="@string/filter"
        android:textColor="@color/gray"
        android:backgroundTint="@color/lightgray"
        app:cornerRadius="8dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/filterArticle2"
        app:layout_constraintStart_toEndOf="@id/filterArticle2"
        app:layout_constraintTop_toTopOf="@+id/filterArticle2" />
    <Button
        android:id="@+id/filterArticle4"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:text="@string/filter"
        app:cornerRadius="8dp"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:backgroundTint="@color/lightgray"
        app:layout_constraintBottom_toBottomOf="@+id/filterArticle3"
        app:layout_constraintStart_toEndOf="@id/filterArticle3"
        app:layout_constraintTop_toTopOf="@+id/filterArticle3" />

</androidx.constraintlayout.widget.ConstraintLayout>
